cmake_minimum_required(VERSION 3.12)
project(Crpage_project4)

set(CMAKE_CXX_STANDARD 17)

add_executable(Crpage_project4
        main.cpp
        MysticalSeaCreatures.cpp
        Octopus.cpp
        Narwall.cpp
#        Starfish.cpp
        README.md)

#add_executable(Crpage_project4
#        main.cpp
#        MysticalSeaCreatures.cpp
#        Octopus.cpp
#        Narwall.cpp
#        #        Starfish.cpp
#        README.md)

